# obsidian-github-publisher-sync

./: .gitignore  2024-11-23.md  AGENTS.md  BUILD_SPEED_RESEARCH.md  CHANGE_LOG.md  CNAME  MIGRATION.md  Main.hs  README.md  index.md  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts  tsconfig.tsbuildinfo
ai-blog/: 2026-03-08-auto-post-mastodon.md  2026-03-09-bfs-content-discovery.md  2026-03-09-duplicate-post-prevention.md  2026-03-09-frontmatter-path-timestamps.md  2026-03-09-obsidian-sync-lock-resilience-v1.md  2026-03-09-obsidian-sync-lock-resilience-v2.md  2026-03-09-obsidian-sync-lock-resilience.md  2026-03-09-platform-disable-env-vars.md  2026-03-09-platform-post-length-enforcement.md  2026-03-09-timestamp-before-push-ordering.md  2026-03-10-agentic-playbook-agents-md.md  2026-03-10-frontmatter-path-timestamps.md  2026-03-10-functional-refactoring.md  2026-03-10-timestamp-before-push-ordering.md  2026-03-10-tts-semicolon-injection.md  2026-03-11-ab-testing-social-media.md  2026-03-11-domination-gitlab-to-github-migration.md  2026-03-11-tts-semicolon-injection.md  2026-03-13-ab-test-metrics-the-experiment-that-forgot-to-observe.md  2026-03-13-building-a-safety-net-comprehensive-testing-for-domination.md  2026-03-14-chickie-loo-priority-user.md  2026-03-14-porting-the-reaction-system.md  2026-03-14-strategy-b-wins-ab-test-results.md  2026-03-14-the-spa-that-cried-404.md  2026-03-16-back-links-to-previous-posts-in-auto-blog-series.md  2026-03-16-closing-the-loop-fully-automating-blog-navigation-and-book-recommendations.md  2026-03-16-deleting-ideas-md-simplifying-the-auto-blog-series.md  2026-03-17-dont-truncate-gemini-request-body-in-auto-blog-logs.md  2026-03-17-stripping-noise-from-the-llm-context-window.md  2026-03-17-unshackling-the-auto-blog-pipeline.md  2026-03-18-bfs-404-guard.md  2026-03-18-enveloppe-to-git-migration.md  2026-03-18-static-giscus-comments.md  2026-03-19-automated-blog-image-generation.md  2026-03-19-gemini-quota-observability.md  2026-03-19-teaching-an-ai-blog-to-think-deeper.md  2026-03-19-the-case-of-the-missing-slash.md  2026-03-20-building-valence-game.md  2026-03-20-cloudflare-free-image-generation.md  2026-03-20-screen-wake-lock-for-tts.md  (+272 more)
articles/: 60-minutes-chief-resigns-saying-shows-independence-was-compromised.md  agentic-engineering-patterns.md  ai-traffic-is-up-527-percent-seo-is-being-rewritten.md  code-execution-with-mcp-building-more-efficient-agents.md  the-nap-wheel.md  (+24 more)
haskell/: automation.cabal
haskell/app/: InjectGiscus.hs  RunScheduled.hs  TestFictionModels.hs  TestGemma4.hs
haskell/dist-newstyle/cache/: compiler  config
haskell/series/: auto-blog-zero.dhall  auto-blog-zero.json  chickie-loo.dhall  chickie-loo.json  convergence.json  positivity-bias.json  systems-for-public-good.dhall  systems-for-public-good.json  the-noise.json
haskell/src/Automation/: AiBlogLinks.hs  AiFiction.hs  AutoBookReports.hs  BlogComments.hs  BlogImage.hs  BlogPosts.hs  BlogPrompt.hs  BlogSeries.hs  BlogSeriesConfig.hs  BlogSeriesDiscovery.hs  BookReport.hs  BookReports.hs  CliArgs.hs  Context.hs  ContextQuery.hs  Credentials.hs  DailyReflection.hs  DailyUpdates.hs  Embed.hs  EmbedSection.hs  Env.hs  Frontmatter.hs  GcpAuth.hs  Gemini.hs  GeminiQuota.hs  GoogleAnalytics.hs  Html.hs  InternalLinking.hs  Json.hs  ObsidianSync.hs  PacificTime.hs  Pipeline.hs  Platform.hs  Prompts.hs  Reflection.hs  ReflectionTitle.hs  RelativePath.hs  Retry.hs  Scheduler.hs  Secret.hs  (+12 more)
haskell/src/Automation/AutoBookReports/: AmazonLink.hs  Discovery.hs  Identify.hs  ReflectionLink.hs  Report.hs
haskell/src/Automation/BlogComments/: GqlTypes.hs  GraphQL.hs
haskell/src/Automation/BlogImage/: ContentDirectory.hs  Eligibility.hs  Markdown.hs  Provider.hs  TitleExtraction.hs
haskell/src/Automation/BlogSeriesDiscovery/: RawConfig.hs
haskell/src/Automation/BookReport/: Gemini.hs
haskell/src/Automation/BookReports/: Amazon.hs  Discovery.hs  PendingState.hs  ReflectionUpdate.hs  Report.hs  Types.hs
haskell/src/Automation/DailyReflection/: EnsureResult.hs
haskell/src/Automation/InternalLinking/: CandidateDiscovery.hs  Gemini.hs  GeminiIntegration.hs  LinkExtraction.hs  Masking.hs
haskell/src/Automation/Series/: AutoBlogZero.hs  ChickieLoo.hs  Convergence.hs  PositivityBias.hs  RelationshipMiniseries.hs  SystemsForPublicGood.hs  TheNoise.hs  VitalSignals.hs
haskell/src/Automation/SocialPosting/: ContentDiscovery.hs  FrontmatterUpdate.hs  LinkExtraction.hs
haskell/src/Automation/StaticGiscus/: GqlTypes.hs  GraphQL.hs
haskell/test/: Spec.hs
haskell/test/Automation/: AiBlogLinksTest.hs  AiFictionTest.hs  BlogImageTest.hs  BlogPromptTest.hs  BlogSeriesConfigTest.hs  BlogSeriesDiscoveryTest.hs  BlogSeriesTest.hs  BlueskyTest.hs  BookReportTest.hs  CliArgsTest.hs  ContextQueryTest.hs  ContextTest.hs  CredentialsTest.hs  DailyReflectionTest.hs  DailyUpdatesTest.hs  EmbedSectionTest.hs  EmbedTest.hs  EnvTest.hs  FrontmatterTest.hs  GcpAuthTest.hs  GeminiTest.hs  GoogleAnalyticsTest.hs  HtmlTest.hs  InternalLinkingTest.hs  JsonTest.hs  MastodonTest.hs  ObsidianSyncTest.hs  OgMetadataTest.hs  PacificTimeTest.hs  PlatformTest.hs  PromptsTest.hs  ReflectionTest.hs  ReflectionTitleTest.hs  RetryTest.hs  SchedulerTest.hs  SocialPostingTest.hs  StaticGiscusTest.hs  TaskRunnerTest.hs  TaskRunnersTest.hs  TestGenerators.hs  (+5 more)
haskell/test/Automation/AutoBookReports/: AmazonLinkTest.hs  DiscoveryTest.hs  IdentifyTest.hs  ReflectionLinkTest.hs  ReportTest.hs
haskell/test/Automation/BlogImage/: ContentDirectoryTest.hs  EligibilityTest.hs  MarkdownTest.hs  ProviderTest.hs  TitleExtractionTest.hs
haskell/test/Automation/BookReport/: GeminiTest.hs
haskell/test/Automation/BookReports/: AmazonTest.hs  DiscoveryTest.hs  PendingStateTest.hs  ReflectionUpdateTest.hs  ReportTest.hs  TypesTest.hs
haskell/test/Automation/InternalLinking/: CandidateDiscoveryTest.hs  GeminiIntegrationTest.hs  GeminiTest.hs  LinkExtractionTest.hs  MaskingTest.hs
haskell/test/Automation/SocialPosting/: ContentDiscoveryTest.hs  FrontmatterUpdateTest.hs  LinkExtractionTest.hs
(+5423 files in other folders)
