cabal-version:       3.0
name:                automation
version:             0.1.0.0
synopsis:            Haskell port of obsidian-github-publisher-sync automation scripts
license:             MIT
build-type:          Simple

common shared
  default-language:    GHC2021
  default-extensions:
    OverloadedStrings
    RecordWildCards
    LambdaCase
    TupleSections
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:
    Automation.Json
    Automation.Types
    Automation.Env
    Automation.Scheduler
    Automation.Text
    Automation.Html
    Automation.Frontmatter
    Automation.Retry
    Automation.Timer
    Automation.Gemini
    Automation.BlogSeriesConfig
    Automation.BlogPosts
    Automation.BlogPrompt
    Automation.BlogSeries
    Automation.DailyReflection
    Automation.DailyUpdates
    Automation.EmbedSection
    Automation.Prompts
    Automation.ReflectionTitle
    Automation.AiBlogLinks
    Automation.AiFiction
    Automation.BlogComments
    Automation.GcpAuth
    Automation.ObsidianSync
    Automation.StaticGiscus
    Automation.BlogImage
    Automation.InternalLinking
    Automation.Pipeline
    Automation.GeminiQuota
    Automation.Platforms.Twitter
    Automation.Platforms.Bluesky
    Automation.Platforms.Mastodon
    Automation.Platforms.OgMetadata
  build-depends:
    base                 >= 4.18 && < 5,
    text                 >= 2.0,
    bytestring           >= 0.11,
    containers           >= 0.6,
    time                 >= 1.12,
    directory            >= 1.3,
    filepath             >= 1.4,
    process              >= 1.6,
    http-client          >= 0.7,
    http-client-tls      >= 0.3,
    http-types           >= 0.12,
    regex-tdfa           >= 1.3,
    crypton              >= 1.0,
    memory               >= 0.18,
    base64-bytestring    >= 1.2,
    mtl                  >= 2.3,
    async                >= 2.2,
    random               >= 1.2,
    case-insensitive     >= 1.2,
    parsec               >= 3.1,
    stm                  >= 2.5,
    transformers         >= 0.6,
    unix                 >= 2.8

executable run-scheduled
  import:              shared
  hs-source-dirs:      app
  main-is:             RunScheduled.hs
  build-depends:
    base,
    automation,
    text,
    containers,
    filepath,
    directory,
    time,
    http-client,
    http-client-tls

executable inject-giscus
  import:              shared
  hs-source-dirs:      app
  main-is:             InjectGiscus.hs
  build-depends:
    base,
    automation,
    text,
    http-client,
    http-client-tls

test-suite automation-tests
  import:              shared
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Automation.SchedulerTest
    Automation.TextTest
    Automation.HtmlTest
    Automation.FrontmatterTest
    Automation.RetryTest
    Automation.EnvTest
    Automation.BlogSeriesConfigTest
    Automation.EmbedSectionTest
    Automation.BlogPromptTest
    Automation.BlogSeriesTest
    Automation.BlogImageTest
    Automation.InternalLinkingTest
  build-depends:
    base,
    automation,
    tasty                >= 1.4,
    tasty-hunit          >= 0.10,
    tasty-quickcheck     >= 0.10,
    QuickCheck           >= 2.14,
    text,
    containers,
    time,
    directory,
    filepath,
    temporary            >= 1.3,
    bytestring
