cabal-version:       3.0
name:                automation
version:             0.1.0.0
synopsis:            Haskell port of obsidian-github-publisher-sync automation scripts
license:             MIT
build-type:          Simple

common shared
  default-language:    GHC2021
  default-extensions:
    OverloadedStrings
    RecordWildCards
    LambdaCase
    TupleSections
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Werror

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:
    Automation.Json
    Automation.Secret
    Automation.Platform
    Automation.Types
    Automation.Env
    Automation.Scheduler
    Automation.Text
    Automation.Html
    Automation.Frontmatter
    Automation.Retry
    Automation.Timer
    Automation.Gemini
    Automation.BlogSeriesConfig
    Automation.BlogPosts
    Automation.BlogPrompt
    Automation.BlogSeries
    Automation.DailyReflection
    Automation.DailyUpdates
    Automation.EmbedSection
    Automation.Prompts
    Automation.ReflectionTitle
    Automation.AiBlogLinks
    Automation.AiFiction
    Automation.BlogComments
    Automation.GcpAuth
    Automation.ObsidianSync
    Automation.StaticGiscus
    Automation.BlogImage
    Automation.BlogImage.ContentDirectory
    Automation.BlogImage.TitleExtraction
    Automation.BlogImage.Eligibility
    Automation.BlogImage.Markdown
    Automation.BlogImage.Provider
    Automation.InternalLinking
    Automation.InternalLinking.CandidateDiscovery
    Automation.InternalLinking.GeminiIntegration
    Automation.InternalLinking.LinkExtraction
    Automation.InternalLinking.Masking
    Automation.Pipeline
    Automation.Reflection
    Automation.GeminiQuota
    Automation.Platforms.Twitter
    Automation.Platforms.Bluesky
    Automation.Platforms.Mastodon
    Automation.RelativePath
    Automation.SocialPosting
    Automation.SocialPosting.ContentDiscovery
    Automation.SocialPosting.FrontmatterUpdate
    Automation.SocialPosting.LinkExtraction
    Automation.Context
    Automation.Title
    Automation.Url
    Automation.Platforms.OgMetadata
    Automation.CliArgs
    Automation.VaultSync
    Automation.TaskRunner
    Automation.PacificTime
    Automation.BlogSeriesDiscovery
  build-depends:
    base                 >= 4.18 && < 5,
    text                 >= 2.0,
    bytestring           >= 0.11,
    containers           >= 0.6,
    time                 >= 1.12,
    directory            >= 1.3,
    filepath             >= 1.4,
    process              >= 1.6,
    http-client          >= 0.7,
    http-client-tls      >= 0.3,
    http-types           >= 0.12,
    network-uri          >= 2.6,
    regex-tdfa           >= 1.3,
    crypton              >= 1.0,
    memory               >= 0.18,
    base64-bytestring    >= 1.2,
    mtl                  >= 2.3,
    async                >= 2.2,
    random               >= 1.2,
    case-insensitive     >= 1.2,
    parsec               >= 3.1,
    stm                  >= 2.5,
    transformers         >= 0.6,
    tz                   >= 0.1.3,
    unix                 >= 2.8

executable run-scheduled
  import:              shared
  hs-source-dirs:      app
  main-is:             RunScheduled.hs
  build-depends:
    base,
    automation,
    text,
    containers,
    filepath,
    directory,
    time,
    http-client,
    http-client-tls

executable inject-giscus
  import:              shared
  hs-source-dirs:      app
  main-is:             InjectGiscus.hs
  build-depends:
    base,
    automation,
    text,
    http-client,
    http-client-tls

test-suite automation-tests
  import:              shared
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Automation.SchedulerTest
    Automation.TextTest
    Automation.HtmlTest
    Automation.FrontmatterTest
    Automation.RetryTest
    Automation.EnvTest
    Automation.BlogSeriesConfigTest
    Automation.EmbedSectionTest
    Automation.BlogPromptTest
    Automation.BlogSeriesTest
    Automation.BlogImageTest
    Automation.InternalLinkingTest
    Automation.BlueskyTest
    Automation.MastodonTest
    Automation.TwitterTest
    Automation.SocialPostingTest
    Automation.SocialPosting.LinkExtractionTest
    Automation.SocialPosting.ContentDiscoveryTest
    Automation.SocialPosting.FrontmatterUpdateTest
    Automation.DailyUpdatesTest
    Automation.StaticGiscusTest
    Automation.AiBlogLinksTest
    Automation.AiFictionTest
    Automation.DailyReflectionTest
    Automation.PromptsTest
    Automation.JsonTest
    Automation.OgMetadataTest
    Automation.ReflectionTitleTest
    Automation.ObsidianSyncTest
    Automation.TypesTest
    Automation.PlatformTest
    Automation.CredentialsTest
    Automation.EmbedTest
    Automation.ContextTest
    Automation.GeminiTest
    Automation.CliArgsTest
    Automation.VaultSyncTest
    Automation.TaskRunnerTest
    Automation.PacificTimeTest
    Automation.BlogSeriesDiscoveryTest
    Automation.BlogImage.ContentDirectoryTest
    Automation.BlogImage.TitleExtractionTest
    Automation.BlogImage.EligibilityTest
    Automation.BlogImage.MarkdownTest
    Automation.BlogImage.ProviderTest
    Automation.TestGenerators
  build-depends:
    base,
    automation,
    tasty                >= 1.4,
    tasty-hunit          >= 0.10,
    tasty-quickcheck     >= 0.10,
    QuickCheck           >= 2.14,
    text,
    containers,
    time,
    directory,
    filepath,
    temporary            >= 1.3,
    bytestring,
    http-client
